@@ -1,3 +1,7 @@
+3/9/2010
+	- Add support for using alternate JCA providers when generating DNSSEC
+	  signatures (patch from Jeffrey Damick <Jeffrey.Damick@neustar.biz>)
+
 2/9/2010
 	- 2.1.1 released
 
